--- a/spring-dubbo-project/pom.xml
+++ b/spring-dubbo-project/pom.xml
@@ -25,6 +25,7 @@
         <maven.compiler.encoding>UTF-8</maven.compiler.encoding>
         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
         <project.reporting.outputEncoding>UTF-8</project.reporting.outputEncoding>
+        <dubbo.version>2.7.6</dubbo.version>
     </properties>
 
     <dependencies>
