--- a/spring-dubbo-project/spring-dubbo-project-provider/pom.xml
+++ b/spring-dubbo-project/spring-dubbo-project-provider/pom.xml
@@ -34,6 +34,18 @@
             <artifactId>spring-dubbo-project-common</artifactId>
             <version>1.0.0-SNAPSHOT</version>
         </dependency>
+
+        <dependency>
+            <groupId>org.apache.dubbo</groupId>
+            <artifactId>dubbo</artifactId>
+            <version>${dubbo.version}</version>
+        </dependency>
+        <dependency>
+            <groupId>org.apache.dubbo</groupId>
+            <artifactId>dubbo-dependencies-zookeeper</artifactId>
+            <version>${dubbo.version}</version>
+            <type>pom</type>
+        </dependency>
     </dependencies>
 
     <build>
