add kryo serializers

--- a/spring-dubbo-project/spring-dubbo-project-common/pom.xml
+++ b/spring-dubbo-project/spring-dubbo-project-common/pom.xml
@@ -11,5 +11,11 @@
 
     <artifactId>spring-dubbo-project-common</artifactId>
 
-
+    <dependencies>
+        <dependency>
+            <groupId>org.apache.dubbo</groupId>
+            <artifactId>dubbo</artifactId>
+            <version>${dubbo.version}</version>
+        </dependency>
+    </dependencies>
 </project>
