--- a/spring-dubbo-project/pom.xml
+++ b/spring-dubbo-project/pom.xml
@@ -26,6 +26,7 @@
         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
         <project.reporting.outputEncoding>UTF-8</project.reporting.outputEncoding>
         <dubbo.version>2.7.6</dubbo.version>
+        <kryo-serializers.version>0.42</kryo-serializers.version>
     </properties>
 
     <dependencies>
