--- a/spring-dubbo-project/spring-dubbo-project-consumer/pom.xml
+++ b/spring-dubbo-project/spring-dubbo-project-consumer/pom.xml
@@ -46,6 +46,11 @@
             <version>${dubbo.version}</version>
             <type>pom</type>
         </dependency>
+        <dependency>
+            <groupId>de.javakaffee</groupId>
+            <artifactId>kryo-serializers</artifactId>
+            <version>${kryo-serializers.version}</version>
+        </dependency>
     </dependencies>
 
     <build>
