--- a/spring-xxl-job-project/spring-xxl-job-project-job/pom.xml
+++ b/spring-xxl-job-project/spring-xxl-job-project-job/pom.xml
@@ -33,6 +33,12 @@
                 </exclusion>
             </exclusions>
         </dependency>
+
+        <dependency>
+            <groupId>com.xuxueli</groupId>
+            <artifactId>xxl-job-core</artifactId>
+            <version>2.2.0</version>
+        </dependency>
     </dependencies>
 
     <build>
