--- a/spring-nacos-project/spring-nacos-project-consumer/src/main/resources/bootstrap.yml
+++ b/spring-nacos-project/spring-nacos-project-consumer/src/main/resources/bootstrap.yml
@@ -6,7 +6,7 @@ spring:
   cloud:
     nacos:
       discovery:
-        server-addr: 127.0.0.1:8848
+        server-addr: ${NACOS-HOST:127.0.0.1}:${NACOS-PORT:8848}
       config:
         server-addr: ${spring.cloud.nacos.discovery.server-addr}
         file-extension: yml
