--- a/spring-hystrix-consumer/spring-hystrix-consumer-provider/pom.xml
+++ b/spring-hystrix-consumer/spring-hystrix-consumer-provider/pom.xml
@@ -76,6 +76,12 @@
             <groupId>com.github.xiaoymin</groupId>
             <artifactId>swagger-bootstrap-ui</artifactId>
         </dependency>
+
+        <dependency>
+            <groupId>pr.provider</groupId>
+            <artifactId>spring-hystrix-provider-api</artifactId>
+            <version>1.0.0-SNAPSHOT</version>
+        </dependency>
     </dependencies>
 
     <build>
