--- a/spring-hystrix-consumer/spring-hystrix-consumer-provider/pom.xml
+++ b/spring-hystrix-consumer/spring-hystrix-consumer-provider/pom.xml
@@ -82,6 +82,11 @@
             <artifactId>spring-hystrix-provider-api</artifactId>
             <version>1.0.0-SNAPSHOT</version>
         </dependency>
+
+        <dependency>
+            <groupId>org.springframework.cloud</groupId>
+            <artifactId>spring-cloud-starter-netflix-hystrix</artifactId>
+        </dependency>
     </dependencies>
 
     <build>
